fixed alignment and width of main page searchbar

--- a/static/styles/styles_index.css
+++ b/static/styles/styles_index.css
@@ -9,7 +9,7 @@ font-size: 25px;
 .searchbar {font-family: "Roboto";
 font-size: 30px;
 text-align: center;
-width: 1000px;
+width: 75%;
 }
 
 .bttons {height:30px;
